--- a/landing/index.html
+++ b/landing/index.html
@@ -3,6 +3,12 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <!-- Favicon - Must be early in head for browser detection -->
+    <link rel="icon" type="image/svg+xml" href="./favicon.svg?v=20241124">
+    <link rel="alternate icon" type="image/x-icon" href="./favicon.ico?v=20241124">
+    <link rel="icon" type="image/png" sizes="32x32" href="./favicon-32x32.png?v=20241124">
+    <link rel="icon" type="image/png" sizes="16x16" href="./favicon-16x16.png?v=20241124">
+    <link rel="apple-touch-icon" sizes="180x180" href="./apple-touch-icon.png?v=20241124">
     <title>Mixmi - Mixmi</title>
     <meta name="description" content="Mixmi is a clean, powerful e-commerce platform built for creators and buyers alike. Sell your stickers without worrying about printing.">
     <meta name="keywords" content="sticker marketplace, e-commerce, custom stickers, digital stickers, print-on-demand">
@@ -23,11 +29,6 @@
     <link rel="preconnect" href="https://fonts.googleapis.com">
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
     <link href="https://fonts.googleapis.com/css2?family=Poppins:wght@400;500;600;700&display=swap" rel="stylesheet">
-    <!-- Favicon -->
-    <link rel="icon" type="image/svg+xml" href="./favicon.svg?v=2">
-    <link rel="alternate icon" href="./favicon.svg?v=2">
-    <link rel="apple-touch-icon" href="./assets/icons/mixmi_logo_v2_160px.svg">
-    <link rel="shortcut icon" href="./favicon.svg?v=2">
     <link rel="stylesheet" href="styles.css?v=20241121-2">
 </head>
 <body>
@@ -42,7 +43,7 @@
                 height="46"
                 loading="lazy"
             />
-            <a href="https://admin.mixmi.co" class="sign-up-btn cta-button">Sign up</a>
+            <a href="./signup.html" class="sign-up-btn cta-button">Sign up</a>
         </div>
     </header>
 
